<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="homeViewModel"
            type="com.example.roomdatabaseapplication.view_model.HomeFragmentViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="133dp"
                android:layout_height="29dp"
                android:layout_marginTop="60dp"
                android:text="@string/my_work_type"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/workType"
                android:layout_width="149dp"
                android:layout_height="41dp"
                android:layout_marginStart="108dp"
                android:hint="@string/my_work_type"
                android:text="@={homeViewModel.workType}"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.103"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <Button
                android:id="@+id/startWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="52dp"
                android:backgroundTint="#03FFFFFF"
                android:text="@string/start"
                android:textAllCaps="false"
                android:textColor="#C10F30D5"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/workType"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/workType"
                app:layout_constraintTop_toTopOf="@+id/workType" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="321dp"
                android:layout_height="69dp"
                android:layout_marginTop="64dp"
                android:text="@string/my_work_entry"
                android:textAlignment="center"
                android:textSize="38sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/workHistoryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/work_history"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/currentWork"
                android:layout_width="147dp"
                android:layout_height="41dp"
                android:visibility="invisible"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@{homeViewModel.currentWork}"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.469"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <Button
                android:id="@+id/stopWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="56dp"
                android:backgroundTint="#03FFFFFF"
                android:text="@string/stop"
                android:textAllCaps="false"
                android:textColor="#C10F30D5"
                android:textStyle="italic"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/workType"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/workType"
                app:layout_constraintTop_toTopOf="@+id/workType" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>